SPA and chat module

--- a/pages/modules/homepage.html
+++ b/pages/modules/homepage.html
@@ -1,11 +1,3 @@
-<div id="moduleMain">
+<div id="module">
     <h1>Főoldal</h1>
-    <style>
-        #moduleMain {
-            transition: all 100ms;
-        }
-    </style>
 </div>
-
-<script>modules/homepage.js</script>
-
