--- a/pages/modules/chat/chat.html
+++ b/pages/modules/chat/chat.html
@@ -1,29 +1,13 @@
 <div id="module">
-    <div class="rules">
-        <h2>Chat szabályzat</h2>
-        <h4>Ha csatlakozol a beszélgetéshez, azzal elfogadod az alábbi szabályokat:</h4>
-        <ul>
-            <li><span>Trágár szavak használata csak MÉRSÉKELTEN</span></li>
-            <li><span>Mások rágalmazása, szóbeli bántalmazása szigorúan tilos. Figyelmeztetés, illetve többszörös
-                    figyelmeztetés
-                    után a chatfalról és a fórumról való kitiltás a következménye.</span></li>
-            <li><span>Mások személyi jogait sértő tartalom közzététele szigorúan tilos. Jogi következményekkel is
-                    járhat.</span></li>
-            <li><span>A chat fal elárasztása (spam) figyelmeztetést, illetve a chat falról való kitiltást
-                    eredményezhet.</span></li>
-        </ul>
-        <a href="#" id="proceed">Továbblépek a beszélgetéshez.</a>
-    </div>
-
-    <div id="main" class="main nodisplay">
+    <div id="main" class="main">
         <form action="/chat/messages" method="POST">
             <input type="text" id="message" name="message">
             <button id="send">Küldés</button>
         </form>
 
-        <div id="activeusers">
+        <!-- <div id="activeusers">
             <h2>Aktív felhasználók</h2>
-        </div>
+        </div> -->
         <div id="chatwindow">
 
         </div>
@@ -31,63 +15,23 @@
     </div>
     <style>
         #activeusers {
-
             width: 300px;
-
-
-
             right: 0;
-
-
             position: fixed;
             text-align: left;
             padding: 0 40px;
-
             min-height: calc(70vh - 50px);
             max-height: calc(70vh - 50px);
             overflow-y: scroll;
             overflow-x: hidden;
-
             background: rgba(0, 0, 0, .1);
-
         }
 
         .show {
             display: block;
         }
 
-        .rules>a {
-            width: 300px;
-            color: black;
-            transition: all 200ms;
-            display: inline-block;
-            position: absolute;
-            padding: 10px 0;
-            left: 0;
-            background: #cf0;
-            text-align: center;
-            text-decoration: none;
-            user-select: none;
-            cursor: pointer;
-            font-weight: 600;
-            font-size: 16px;
-            border-radius: 5px;
-            border: 2px solid rgba(0, 0, 0, .3);
-            box-shadow: 2px 2px 10px rgba(0, 0, 0, .3)
-        }
-
-
-        ul {
-            text-align: left;
-        }
-
-        ul>li {
-            margin: 10px 0;
-        }
-
-        .nodisplay {
-            display: none;
-        }
+        
 
         #module {
             margin-top: 30px;
@@ -252,4 +196,4 @@
     </style>
 </div>
 
-<script>modules/chat.js</script>
+<script>chat/chat.js</script>
