Add to materials db and query elements to be displayed

--- a/pages/modules/admin/main.html
+++ b/pages/modules/admin/main.html
@@ -15,7 +15,15 @@
                             <div>
                                 <i class="fas fa-database"></i>
                             </div>
-                            <span>Munkafolyamat adatbázis kezelése</span>
+                            <span>Munka adatbázis kezelése</span>
+                        </div>
+                    </td>
+                    <td>
+                        <div class="card _HOVER_SCALE" id="matdb_button">
+                            <div>
+                                <i class="fas fa-database"></i>
+                            </div>
+                            <span>Anyag adatbázis kezelése</span>
                         </div>
                     </td>
                     <td>
