--- a/pages/protected.html
+++ b/pages/protected.html
@@ -13,7 +13,7 @@
     <title>EVAK - Egyszerűsített Villanyszerelő Árajánlat Kezelő rendszer</title>
 </head>
 
-<body onload="selectPage('admin/dbactions')">
+<body onload="selectPage('admin/materiallist')">
 
     <div class="header">
         <div class="version">
