Quote system update

--- a/pages/modules/admin/dbactions.html
+++ b/pages/modules/admin/dbactions.html
@@ -169,3 +169,5 @@
     </style>
 </div>
 <script>admin/dbactions.js</script>
+<script>global/selector.js</script>
+<script>global/eventlistener.js</script>
