--- a/pages/modules/admin/landing.html
+++ b/pages/modules/admin/landing.html
@@ -52,7 +52,7 @@
         }
         #module {
             display: flex;
-            width: 100vw;
+            width: 100%;
             height: auto;
             overflow: visible;
             left: 0;
@@ -137,4 +137,3 @@
     </style>
 </div>
 <script>admin / landing.js</script>
-<script>global / spinner.js</script>
