--- a/pages/modules/admin/main.html
+++ b/pages/modules/admin/main.html
@@ -3,7 +3,7 @@
         <table>
             <thead>
                 <tr>
-                    <th colspan="4">
+                    <th colspan="6">
                         <h1>Adminisztrátor kezelőpult</h1>
                     </th>
                 </tr>
@@ -51,10 +51,7 @@
                         </div>
                     </td>
                 </tr>
-            </tbody>
-            <tfoot>
                 <tr>
-                    <td colspan="3"></td>
                     <td>
                         <div class="card cf0bg _HOVER_BORDER" id="logout_button">
                             <div>
@@ -64,7 +61,8 @@
                         </div>
                     </td>
                 </tr>
-            </tfoot>
+            </tbody>
+
         </table>
     <style scoped>
         table {
@@ -72,6 +70,7 @@
             margin: 0 auto;
             vertical-align: middle;
             height: 100%;
+            width: 100%;
             border-spacing: 30px;
 
         }
