--- a/pages/modules/quotes/quotes.html
+++ b/pages/modules/quotes/quotes.html
@@ -2,9 +2,13 @@
     
 
     <div class="toolbar">
+        <a href="" class="btn3">Vissza az előző oldalra</a>
         <div class="searchbar">
             <span><i class="fas fa-search"></i></span>
             <input type="text" name="" id="">
+        </div>
+        <div>
+
         </div>
     </div>
     <table class="table_header">
