--- a/pages/modules/chat/chat.html
+++ b/pages/modules/chat/chat.html
@@ -31,7 +31,7 @@
             display: block;
         }
 
-        
+
 
         #module {
             margin-top: 30px;
@@ -58,7 +58,7 @@
             overflow-y: scroll;
             overflow-x: hidden;
             border-radius: 10px;
-            background: rgba(0, 0, 0, .1);
+            background: #f0f0f0;
             border: 1px solid rgba(0, 0, 0, .3)
         }
 
@@ -77,18 +77,18 @@
             z-index: 10;
             display: flex;
             align-content: center;
-            padding: 10px;
-            font-weight: 600;
-            margin: 10px 0;
-            width: calc(100% - 400px);
-            background: rgba(0, 0, 0, .15);
+            padding: 4px;
+            font-weight: 400;
+            margin: 4px 0;
+            width: 100%;
+            background: white;
             border-radius: 10px;
             border-radius: 5px;
             animation: swimin 400ms cubic-bezier(0.51, -0.01, 0.75, 1)
         }
 
         #chatwindow>div>span {
-            font-weight: 600;
+            font-weight: 500;
 
 
         }
@@ -129,7 +129,10 @@
             cursor: pointer;
             user-select: none;
             margin-right: 10px;
-            text-shadow: .08em .08em 2px black, -.08em -.08em 2px black, -.08em .08em 2px black, .08em -.08em 2px black;
+            /* text-shadow: .08em .08em 2px black, -.08em -.08em 2px black, -.08em .08em 2px black, .08em -.08em 2px black; */
+
+            font-weight: 900;
+            -webkit-text-stroke: .02em black;
         }
 
         .user::after {
@@ -162,7 +165,7 @@
             height: auto;
             border-radius: 5px;
             color: #333;
-            background: #aaa;
+            background: #eee;
             border: 1px solid black;
             font-weight: 600;
             font-size: 16px;
@@ -196,4 +199,5 @@
     </style>
 </div>
 
-<script>chat/chat.js</script>
+<script>global / getcookie.js</script>
+<script>chat / chat.js</script>
